# text-click-captcha-solver

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
captcha_solver/: __init__.py  captcha_locator.py  click.py  clickword_solver.py  contour.py  exceptions.py  solver.py  vision.py
examples/: basic.py
tests/: test_solver.py
