[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "text-click-captcha-solver"
version = "0.1.0"
description = "Automated solver for Chinese text-sequence CAPTCHAs (文字点选验证码) using OpenCV contour detection + Vision AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "captcha", "opencv", "vision-ai", "playwright", "web-automation", "chinese-captcha",
    "验证码识别", "点选验证码", "文字点选验证码", "captcha破解", "图形验证码",
    "OCR验证码", "视觉AI", "web自动化",
]

authors = [
    {name = "xs0364"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
]

[project.urls]
"Homepage" = "https://github.com/xs0364/text-click-captcha-solver"
"Bug Tracker" = "https://github.com/xs0364/text-click-captcha-solver/issues"
