[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "text-click-captcha-solver"
version = "1.0.0"
description = "文字顺序点击验证码自动破解 — ddddocr离线识别方案 / Chinese text-sequence CAPTCHA solver using ddddocr"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "captcha", "ddddocr", "ocr", "playwright", "web-automation", "chinese-captcha",
    "验证码识别", "点选验证码", "文字点选验证码", "文字顺序点击验证码",
    "OCR验证码", "图形验证码", "web自动化",
]

authors = [
    {name = "xs0364"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "ddddocr>=1.4.0",
    "Pillow>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/xs0364/text-click-captcha-solver"
"Bug Tracker" = "https://github.com/xs0364/text-click-captcha-solver/issues"
